# enmon

./: .appveyor.yml  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.linux  Makefile.macos  Makefile.old  Makefile.windows  README.md  bridge.c  bridge.h  ft260.c  hardwario-cert.p12.enc  hid.c  hid.h  main.c  sht20.c  sht20.h  test.bat  test.sh  util.c  util.h
hidapi/: hid.c
src/: CMakeLists.txt  bridge.c  bridge.h  cli.c  cli.h  common.h  ft260.c  ft260.h  hid.c  hid.h  main.c  main.h  mpl3115a2.c  mpl3115a2.h  opt3001.c  opt3001.h  sht20.c  sht20.h  sht30.c  sht30.h  util.c  util.h
src/linux/: CMakeLists.txt  hid.c
src/macos/: CMakeLists.txt  hid.c
src/windows/: CMakeLists.txt  hid.c
