cmake_minimum_required(VERSION 3.13)
project(enmon LANGUAGES C)
add_executable(enmon)
add_subdirectory(src)
set_property(TARGET enmon PROPERTY C_STANDARD 11)
set_property(TARGET enmon PROPERTY C_STANDARD_REQUIRED ON)
if(MSVC)
    target_compile_options(enmon PRIVATE /W3 /O1 /Os /Gy)
else()
    target_compile_options(enmon PRIVATE -Wall -Wextra -pedantic -O3)
endif()
